--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <div class="container">
-        <div class="summary">+
+        <div class="summary">
             <div class="summary-card">
                 <h3>Total Expenses</h3>
                 <div class="amount total-expenses">₹0</div>
